--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,13 +8,12 @@ body {
     padding: 20px;
     background-image: url(http://www.beer-faq.com/wp-content/uploads/2015/03/Beer-faq-bg-1500.jpg);
     background-position: 50% 21%;
-    /* font-weight: bold; */
 }
 
 h1 {
     text-align: center;
     text-shadow: #444 1px 1px;  
-    font-weight: 900;    
+    font-weight: 900;   
 }
 
 .instruction {
@@ -25,15 +24,13 @@ h1 {
 }
 
 h5 {
-    /* font-weight: bold; */
-    /* text-shadow: #ddd 1px 1px; */
     font-size: 24px;
     color   : white
 }
 
 .lead {
     font-weight: bold;
-    text-shadow: #333 2px 2px;
+    text-shadow: indigo 2px 2px;
     color: white;
 }
 
@@ -41,6 +38,11 @@ h5 {
     color: red;
     font-weight: bold;
     font-size: 3em;
-    /* float: right; */
-    position: absolute; right: 75px; bottom: 70px;
+    position: absolute; right: 66px; bottom: 69px;
+}
+
+.timer {
+    background-color: #333;
+    padding: 0 15px;
+    z-index: 99;
 }
